base/src/test/resources/failure/operator/self-bind.aya.txt
In file $FILE:2:9 ->

  1 |   def infix + : Type => +
  2 |     looser +
    |            ^^

Error: Self bind is not allowed

Resolving interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
